# OCRProjectDemo

./: .dockerignore  .env  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: quality.yml
app/: main.py  models.py  settings.py  tasks.py
tests/: test_app.py
